# store_api

./: README.md  pyproject.toml
store/: main.py
store/controllers/: product.py
store/models/: base.py
store/schemas/: base.py  product.py
store/usecases/: product.py
tests/: conftest.py  factories.py
tests/controllers/: test_products.py
tests/schemas/: test_product.py
tests/usecases/: test_products.py
